attempting to fix css button on ios

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -522,11 +522,14 @@ h3 {
 	display:block;
 }
 .login-form .group .input,
-.login-form .group .button{
+.login-form .group .button {
 	border:none;
 	padding:15px 20px;
 	border-radius:25px;
-	background:var(--form-field-color);
+  background:var(--form-field-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
